{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 12,
  "lineage": "21b800b6-216f-2960-7860-32e38df884b3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "streamlit",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a534655e28c95839",
            "arn": "arn:aws:ec2:ap-northeast-1:498218886114:elastic-ip/eipalloc-0a534655e28c95839",
            "association_id": "eipassoc-01bd0c21734678c48",
            "domain": "vpc",
            "id": "eipalloc-0a534655e28c95839",
            "instance": "i-0efba6b7064eaac2f",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-01d6e5a8976a8ce62",
            "private_dns": "ip-10-0-1-201.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.201",
            "public_dns": "ec2-176-34-60-107.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "176.34.60.107",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "streamlit-app-streamlit-eip"
            },
            "tags_all": {
              "Name": "streamlit-app-streamlit-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.streamlit",
            "aws_security_group.streamlit",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "streamlit",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d52744d6551d851e",
            "arn": "arn:aws:ec2:ap-northeast-1:498218886114:instance/i-0efba6b7064eaac2f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "streamlit-app-ec2-profile",
            "id": "i-0efba6b7064eaac2f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01d6e5a8976a8ce62",
            "private_dns": "ip-10-0-1-201.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.201",
            "public_dns": "ec2-13-114-31-148.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.114.31.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-070061e1027961ebc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-061a691079ce5b789",
            "tags": {
              "Name": "streamlit-app-streamlit-instance"
            },
            "tags_all": {
              "Name": "streamlit-app-streamlit-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-050faf8b6f6bb3438"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.streamlit",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:498218886114:internet-gateway/igw-07dcfe697e4f675b3",
            "id": "igw-07dcfe697e4f675b3",
            "owner_id": "498218886114",
            "tags": {
              "Name": "streamlit-app-igw"
            },
            "tags_all": {
              "Name": "streamlit-app-igw"
            },
            "vpc_id": "vpc-0359f527d39b77df6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:498218886114:route-table/rtb-0e44e8deb229fdbfa",
            "id": "rtb-0e44e8deb229fdbfa",
            "owner_id": "498218886114",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07dcfe697e4f675b3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "streamlit-app-public-rt"
            },
            "tags_all": {
              "Name": "streamlit-app-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0359f527d39b77df6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a75b89a52e8467f7",
            "route_table_id": "rtb-0e44e8deb229fdbfa",
            "subnet_id": "subnet-061a691079ce5b789"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "streamlit",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:498218886114:security-group/sg-050faf8b6f6bb3438",
            "description": "Security group for Streamlit app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050faf8b6f6bb3438",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8501,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8501
              }
            ],
            "name": "streamlit-app-streamlit-sg",
            "name_prefix": "",
            "owner_id": "498218886114",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "streamlit-app-streamlit-sg"
            },
            "tags_all": {
              "Name": "streamlit-app-streamlit-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0359f527d39b77df6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:498218886114:subnet/subnet-061a691079ce5b789",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061a691079ce5b789",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "498218886114",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "streamlit-app-public-subnet"
            },
            "tags_all": {
              "Name": "streamlit-app-public-subnet"
            },
            "vpc_id": "vpc-0359f527d39b77df6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:498218886114:vpc/vpc-0359f527d39b77df6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09ca5ca83f97c6108",
            "default_route_table_id": "rtb-0804143b12672c419",
            "default_security_group_id": "sg-07392c4c389fbe6aa",
            "dhcp_options_id": "dopt-0411a129c9011571c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0359f527d39b77df6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0804143b12672c419",
            "owner_id": "498218886114",
            "tags": {
              "Name": "streamlit-app-vpc"
            },
            "tags_all": {
              "Name": "streamlit-app-vpc"
            }
          }
        }
      ]
    }
  ]
}